boot 4.1.0 modern changes and fixes added