@@ -15,14 +15,14 @@ dependencies {
     implementation(platform(libs.sb.bom))
 
     implementation(libs.bundles.springweb)
-    implementation(libs.bundles.databasejpa)
+    implementation(libs.bundles.persistence.pg)
     implementation(libs.bundles.lombokmapstruct)
-
     implementation("com.app:shared-common:1.0.0-SNAPSHOT")
     implementation("com.app:shared-security:1.0.0-SNAPSHOT")
-    
+
     implementation(libs.springdoc.openapi.webmvc)
-    
+    implementation(libs.reactor.core)
+
     developmentOnly(platform(libs.sb.bom))
     developmentOnly(libs.sb.docker.compose)
     developmentOnly(libs.sb.devtools)
@@ -40,18 +40,30 @@ tasks.withType<Test> {
 }
 
 tasks.withType<JavaCompile>().configureEach {
-    options.isFork = true
-    options.forkOptions.jvmArgs = (options.forkOptions.jvmArgs ?: mutableListOf()).apply {
-        addAll(listOf("--add-opens", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED", "--add-opens", "jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED", "--add-opens", "jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED", "--add-opens", "jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED", "--add-opens", "jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED", "--add-opens", "jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED", "--add-opens", "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED", "--add-opens", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED", "--add-opens", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"))
+    options.encoding = "UTF-8"
+    options.compilerArgs.removeAll { it == "--enable-preview" }
+}
+
+spotless {
+    java {
+        googleJavaFormat("1.27.0")
+        removeUnusedImports()
     }
 }
 
-spotless { java { googleJavaFormat("1.27.0") } }
+tasks.bootBuildImage { environment.put("BP_JVM_CDS_ENABLED", "true") }
 
-tasks.withType<org.springframework.boot.gradle.tasks.run.BootRun> { systemProperties(System.getProperties().map { it.key.toString() to it.value }.toMap()) }
+
+tasks.withType<org.springframework.boot.gradle.tasks.run.BootRun> {
+    systemProperties(
+        System.getProperties().map { it.key.toString() to it.value }.toMap()
+    )
+}
 
 tasks.register<Exec>("stopApp") {
     group = "application"
     description = "Stops the running product-service application."
     commandLine("sh", "-c", "lsof -t -i:8082 | xargs kill -9 || true")
 }
+
+
